syntax = "proto2";

import "key_version_proto.proto";

option java_package = "com.google.k2crypto.keyversions";

package com.google.k2crypto.keyversions;

message AesKeyVersionData {
  extend KeyVersionData {
    required AesKeyVersionData keyVersion = 10001;
  }
  // Non-core fields go here
}

message AesKeyVersionCore {
  extend KeyVersionCore {
    required AesKeyVersionCore keyVersion = 10001;
  }
  // Core fields will be hashed into the KeyVersion ID
  optional bytes matter = 1;
  optional bytes iv = 2;
  optional BlockMode block_mode = 3;
  optional Padding padding = 4;
}
